--- a/src/app/pages/admin/surveys/components/template-builder/template-builder.component.scss
+++ b/src/app/pages/admin/surveys/components/template-builder/template-builder.component.scss
@@ -43,15 +43,13 @@
       font-size: 12px;
       color: var(--color-warning, #ff9800);
     }
-
-    button mat-icon {
-      font-size: 20px;
-      width: 20px;
-      height: 20px;
-      vertical-align: middle;
-      margin-right: 4px;
-    }
   }
+}
+
+// Button icon alignment
+button mat-icon {
+  vertical-align: middle;
+  margin-right: 4px;
 }
 
 .loading-container,
