--- a/src/app/pages/surveys/components/survey-list/survey-list.component.scss
+++ b/src/app/pages/surveys/components/survey-list/survey-list.component.scss
@@ -121,6 +121,13 @@
   }
 }
 
+// Button icon alignment
+/* stylelint-disable-next-line no-descending-specificity */
+button mat-icon {
+  vertical-align: middle;
+  margin-right: 4px;
+}
+
 // Responsive adjustments
 @media (width <= 600px) {
   .survey-list-container {
